# cdp-browser

./: .dockerignore  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  sauce_demo.py
.github/: pull_request_template.md
archive/: browser.py.old  page.py.old
cdp_browser/: main.py
cdp_browser/browser/: __init__.py  browser.py  exceptions.py  input.py  page.py
cdp_browser/core/: __init__.py  connection.py  exceptions.py  protocol.py
cdp_browser/stealth/: __init__.py  patches.py  profiles.py
cdp_browser/utils/: __init__.py  logging.py  proxy.py
docker/: Dockerfile  entrypoint.sh  proxy.js  startup.sh
docs/: CDP_SETUP.md  README.md  cloudflare_requirements.md  cloudflare_turnstile.md  index.md  stealth_v3_plan.md
docs/development/: notes.md  project-plan.md  requirements.md  research.md
docs/examples/: cloudflare_turnstile_example.py
docs/stealth/: implementation-plan.md
documentation/: architecture.md  project-plan.md  review-1.md
examples/: browserless_api_example.py  browserless_example.py  browserless_form_example.py  browserless_screenshot.py  browserless_test.py  cloudflare_test.py  form_interaction.py  simple_navigation.py  stealth_mode.py
scripts/: run_docker.sh  test_cdp.sh
tests/: conftest.py  test_browser.py  test_cloudflare_turnstile.py  test_cloudflare_turnstile_debug.py  test_cloudflare_turnstile_enhanced.py  test_connection.py  test_input.py  test_navigation.py  test_simple.py  test_stealth.py  test_stealth_features.py  test_stealth_fingerprint.py  test_stealth_webdriver.py
tests/benchmark/: config.yaml  (+2 more)
(+15 files in other folders)
