[tool.poetry]
name = "cdp-browser"
version = "0.1.0"
description = "Lightweight Python client for Chrome DevTools Protocol on ARM64"
authors = ["patrick o'leary <pjaol@pjaol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^11.0.3"
aiohttp = "^3.8.5"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
